Backend frontend implement

--- a/backend/.env
+++ b/backend/.env
@@ -7,4 +7,6 @@ CLERK_SECRET_KEY=sk_test_AJ5jHbZsbaUQpoAOcBHhDSRuN3FGrtsNbNWiu7wiez
 
 CLERK_WEBHOOK_SECRET=whsec_xkVoY4ohlFIPtpfdXRhE84BfAasxL1tI
 
-                    
+CLOUDINARY_CLOUD_NAME=deqqsyymm             
+CLOUDINARY_API_KEY=891118554211535                
+CLOUDINARY_API_SECRET=9Gvx-8B6QJ-LznUkzkKtkjhqNuY           
